codegen/ui_tests/rhai_fn_rename_to_index_getter.stderr
error: use attribute 'index_get' instead
  --> ui_tests/rhai_fn_rename_to_index_getter.rs:12:15
   |
12 |     #[rhai_fn(name = "index$get$")]
   |               ^^^^
